@startuml CLASSES_PARTICIPANTES_AUTH
title "Classes participantes — S'authentifier (attributs et méthodes)"
skinparam classAttributeIconSize 0

class "Utilisateur" as User <<actor>>

class LoginPage <<boundary>> {
  - credentials : { username, password }
  --
  + handleSubmit() : void
  + redirectAfterLogin() : void
}

class AuthBffController <<boundary>> {
  - identityClient : IdentityClient
  --
  + login(request : LoginRequest) : TokenResponse
  + refresh(request : RefreshRequest) : TokenResponse
  + logout(request : LogoutRequest) : void
  + me() : MeResponse
}

class AuthController <<boundary>> {
  - authService : AuthService
  --
  + login(request : LoginRequest) : TokenResponse
  + refresh(request : RefreshRequest) : TokenResponse
  + logout(auth, request, body) : void
  + me(auth : Authentication) : MeResponse
}

class AuthService <<control>> {
  - appUserRepository : AppUserRepository
  - refreshTokenRepository : RefreshTokenRepository
  - revokedAccessJtiRepository : RevokedAccessJtiRepository
  - jwtService : JwtService
  - passwordEncoder : PasswordEncoder
  - auditEventPublisher : AuditEventPublisher
  --
  + login(username, password) : TokenResponse
  + refresh(refreshTokenRaw) : TokenResponse
  + logout(username, request, refresh, revokeAll) : void
  + me(username) : MeResponse
  - issueTokens(user) : TokenResponse
  - hashToken(raw) : String
}

class JwtService <<control>> {
  - accessSecret : String
  - refreshSecret : String
  --
  + issueAccessToken(user) : String
  + issueRefreshToken(user) : String
  + parseRefreshToken(raw) : Claims
  + parseAccessToken(raw) : Claims
}

class AppUser <<entity>> {
  - id : Long
  - username : String
  - email : String
  - fullName : String
  - passwordHash : String
  - roles : Set~Role~
  - hospitalServiceIds : Set~Long~
  - active : boolean
  - createdAt : Instant
  --
  + getId() : Long
  + getUsername() : String
  + isActive() : boolean
}

class RefreshToken <<entity>> {
  - id : Long
  - user : AppUser
  - tokenHash : String
  - expiresAt : Instant
  - revoked : boolean
  --
  + getExpiresAt() : Instant
  + isRevoked() : boolean
}

User "1" --> "1" LoginPage : association
LoginPage "1" --> "1" AuthBffController : association
AuthBffController "1" --> "1" AuthController : association
AuthController "1" --> "1" AuthService : association
AuthService "1" --> "1" AppUser : association
AuthService "1" --> "1" JwtService : association
AuthService "1" --> "0..*" RefreshToken : association

@enduml
